fix footer overlap

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,13 +1,25 @@
+html, body {
+    height: 100%;
+}
+
+.wrapper {
+    min-height: 100%;
+    position: relative;
+}
+
 .header {
     background-color: #4DBC96;
     padding: 3em;
     display: flex;
     justify-content: center;
-    
 }
 
 h1 {
     font-size: 3.25em;
+}
+
+main {
+    padding-bottom: 4em;
 }
 
 .input-header {
